feat: remove eager full-library load from BookService
Drop booksQuery/books/getBooksQueryOptions/booksError/isBooksLoading
(the 132k-book GET /books fetch); findBookById is gone, getBooksByIds
now calls /books/batch, and uniqueMetadata reads the uncapped
facets/values aggregate instead of scanning the loaded list.
Fix the resulting callers (file-mover, book-menu unshelve, dashboard
loading state) and the pre-existing JDK 25/Mockito test breakage in
AuthorMetadataServiceTest.